--- a/partials/head.html
+++ b/partials/head.html
@@ -1,9 +1,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Home | Corlate</title>
+    <!-- build:process -->
+    <meta name="description" content="<%= meta.description %>">
+    <meta name="author" content="<%= meta.author%>">
+    <title><%= homepageTitle %></title>
+    <!-- /build -->
     
     <!-- core CSS -->
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
