--- a/less/index.less
+++ b/less/index.less
@@ -3,6 +3,7 @@
 @import "font-awesome.less";
 @import "prettyPhoto.less";
 @import "animate.less";
+@import "card.less";
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800);
 
@@ -27,11 +28,6 @@ h6 {
   font-weight: 600; 
   font-family: 'Open Sans', sans-serif;
   color:#4e4e4e;
-}
-
-h1{
-  font-size: 36px;
-  color:#fff;
 }
 
 h2{
@@ -393,7 +389,7 @@ input.search-form:hover {
   margin-top: 140px;
 }
 
-#main-slider .carousel h2 {
+#main-slider .carousel h2, #main-slider .carousel h1 {
   color: #fff;
 }
 
