Splitting less files up

--- a/less/typography.less
+++ b/less/typography.less
@@ -54,3 +54,10 @@ a {
 a:hover, a:focus {
   color: #d43133;
 }
+
+a:hover,
+a:focus {
+  color: #111;
+  text-decoration: none;
+  outline: none;
+}
