--- a/less/bootstrap/navbar.less
+++ b/less/bootstrap/navbar.less
@@ -166,7 +166,7 @@
   padding: @navbar-padding-vertical @navbar-padding-horizontal;
   font-size: @font-size-large;
   line-height: @line-height-computed;
-  height: @navbar-height;
+  // height: @navbar-height;
 
   &:hover,
   &:focus {
