Moving header, footer, meta and head templates to partials/components/ Removing files

--- a/partials/services.html
+++ b/partials/services.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-include "head.html"
+include "components/head.html"
 <body>
 
-    include "header.html"
+    include "components/header.html"
 
     <!--sections -->
     include "sections/services.html"
@@ -12,7 +12,7 @@ include "head.html"
     include "sections/bottom.html"
     <!-- end sections -->
 
-    include "footer.html"
+    include "components/footer.html"
 
     <!-- build:script jquery -->
     <script src="js/jquery.js"></script>
