--- a/partials/shortcodes.html
+++ b/partials/shortcodes.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-include "head.html"
+include "components/head.html"
 <body>
 
-    include "header.html"
+    include "components/header.html"
 
     <!--sections -->
     <section id="content" class="shortcode-item">
@@ -22,7 +22,7 @@ include "head.html"
     
     <!-- end sections -->
 
-    include "footer.html"
+    include "components/footer.html"
 
     <!-- build:script jquery -->
     <script src="js/jquery.js"></script>
