--- a/partials/index.html
+++ b/partials/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-include "head.html"
+include "components/head.html"
 <body class="homepage">
 
-    include "header.html"
+    include "components/header.html"
 
     <!--sections -->
     include "sections/slider.html"
@@ -17,7 +17,7 @@ include "head.html"
     include "sections/bottom.html"
     <!-- end sections -->
 
-    include "footer.html"
+    include "components/footer.html"
 
     <!-- build:script jquery -->
     <script src="js/jquery.js"></script>
