--- a/partials/philips-digital-dictation.html
+++ b/partials/philips-digital-dictation.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-include "head.html"
+include "components/head.html"
 <body>
 
-    include "header.html"
+    include "components/header.html"
 
     <!--sections -->
     <section>
@@ -39,7 +39,7 @@ include "head.html"
     include "sections/bottom.html"
     <!-- end sections -->
 
-    include "footer.html"
+    include "components/footer.html"
 
     <!-- build:script jquery -->
     <script src="js/jquery.js"></script>
