--- a/partials/pricing.html
+++ b/partials/pricing.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-include "head.html"
+include "components/head.html"
 <body>
 
-    include "header.html"
+    include "components/header.html"
 
     <!--sections -->
     include "sections/pricing.html"
     include "sections/bottom.html"
     <!-- end sections -->
 
-    include "footer.html"
+    include "components/footer.html"
 
     <!-- build:script jquery -->
     <script src="js/jquery.js"></script>
