--- a/partials/philips-digital-dictation.html
+++ b/partials/philips-digital-dictation.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-include "components/head.html"
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- build:process -->
+    <meta name="description" content="<%= meta.description %>">
+    <meta name="author" content="<%= meta.author%>">
+    <title><%= title.philips %></title>
+    <!-- /build -->
+    include "components/headscriptsandlinks.html"
+</head>
 <body>
 
     include "components/header.html"
@@ -45,7 +54,7 @@ include "components/head.html"
     <script src="js/jquery.js"></script>
     <!-- /build -->
 
-    <!-- build:script bundle -->
+    <!-- build:script built -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/jquery.isotope.min.js"></script>
